--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-android",
-  "version": "7.0.0",
+  "version": "7.0.0-redarea",
   "description": "cordova-android release",
   "bin": {
     "create": "bin/create"
@@ -8,7 +8,7 @@
   "main": "bin/templates/cordova/Api.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-android"
+    "url": "https://github.com/redarea-snc/cordova-android"
   },
   "bugs": {
     "url": "https://issues.apache.org/jira/browse/CB"
